fix CS-1573 priority icon display wrong position

--- a/eXoApplication/calendar/webapp/src/main/webapp/skin/DefaultSkin/webui/UICalendarView/Stylesheet.css
+++ b/eXoApplication/calendar/webapp/src/main/webapp/skin/DefaultSkin/webui/UICalendarView/Stylesheet.css
@@ -599,10 +599,20 @@
 }
 
 .UIListView .highPriorityIcon {
+	_position:static;
  margin: auto;
  float: none;
 }
-
+.UIListView .normalPriorityIcon {
+	_position:static;
+ margin: auto;
+ float: none;
+}
+.UIListView .lowPriorityIcon {
+	_position:static;
+ margin: auto;
+ float: none;
+}
 .ListBar {
 	background: url('../background/CalendarBackground.gif') repeat-x center -79px;		
 	height: 26px;
